Add PDFiumPrint::CreatePrintPdf() method.

Split most of the code in PDFiumPrint::PrintPagesAsPdf() into a separate
method. CreatePrintPdf() will be reused in an upcoming CL.

BUG=887825

Change-Id: I0e6fee3a6908cee038a45e5a7f62182559f33df4
Reviewed-on: https://chromium-review.googlesource.com/1238076
Commit-Queue: Lei Zhang <thestig@chromium.org>
Reviewed-by: Rebekah Potter <rbpotter@chromium.org>
Cr-Commit-Position: refs/heads/master@{#593433}
Former-commit-id: c5cc4dd615a4d6ab0993a4c674761866934a5ed2